// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component matches snapshot with additional props 1`] = `
<body>
  .c0 {
  margin-right: -4px;
}

.c1 {
  background: none;
  border: none;
  text-align-last: right;
  width: 100%;
}

<div>
    <div
      class="c0"
    >
      <label>
        center
      </label>
      <select
        class="c1"
        name="name"
        placeholder="placeholder"
      >
        <option
          class=""
          value="option-1"
        >
          option 1
        </option>
        <option
          class=""
          value="option-2"
        >
          option 2
        </option>
        <option
          class=""
          disabled=""
          value=""
        >
          Не выбрано
        </option>
      </select>
    </div>
  </div>
</body>
`;

exports[`Select component matches snapshot with only required props 1`] = `
.c0 {
  margin-right: -4px;
}

.c1 {
  background: none;
  border: none;
  text-align-last: right;
  width: 100%;
}

<body>
  <div>
    <div
      class="c0"
    >
      <select
        class="c1"
      >
        <option
          class=""
          disabled=""
          value=""
        >
          Не выбрано
        </option>
      </select>
    </div>
  </div>
</body>
`;
